--- a/productos.html
+++ b/productos.html
@@ -7,12 +7,16 @@
     <link rel="stylesheet" href="productos_styles.css">
 </head>
 <body>
+    <header class="navbar"></header>
+      
+    </header>
     <div class="product-container">
         <!-- El contenedor del producto -->
         <div id="product-details"></div>
     </div>
 
     <script src="productos.js"></script>
+    <script src="navbar.js"></script>
     
 </body>
 </html>
